fix broken path and avoid alt text being half covered

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -176,11 +176,11 @@ main {
     object-fit: contain;
     width: 200px;
     /* height: 100px; */
-    line-height: 0em;
+    line-height: 1em;
 }
 
 .gallery {
-    line-height: 0em;
+    line-height: 1em;
 }
 
 
@@ -244,7 +244,9 @@ p.light-on-black-background {
     padding: 15px 32px;
     font-size: 100%;
     background-color: orange;
-    color: color: #3a3a3a;;
+    color: color: #3a3a3a;
+    display: flex;
+    justify-content: flex-end
 }
 
 
